{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 7,
  "lineage": "156659d5-b591-c378-f555-7eab9160900c",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-10-13T09:21:40.507-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ecommerce-backend-1760307199/global/firewalls/ecommerce-staging-vpc-allow-internal",
            "log_config": [],
            "name": "ecommerce-staging-vpc-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/ecommerce-backend-1760307199/global/networks/ecommerce-staging-vpc",
            "priority": 1000,
            "project": "ecommerce-backend-1760307199",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ecommerce-backend-1760307199/global/firewalls/ecommerce-staging-vpc-allow-internal",
            "source_ranges": [
              "10.20.0.0/24",
              "10.21.0.0/16",
              "10.22.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-10-13T09:21:40.501-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ecommerce-backend-1760307199/global/firewalls/ecommerce-staging-vpc-allow-ssh",
            "log_config": [],
            "name": "ecommerce-staging-vpc-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/ecommerce-backend-1760307199/global/networks/ecommerce-staging-vpc",
            "priority": 1000,
            "project": "ecommerce-backend-1760307199",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ecommerce-backend-1760307199/global/firewalls/ecommerce-staging-vpc-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/ecommerce-backend-1760307199/global/networks/ecommerce-staging-vpc",
            "mtu": 0,
            "name": "ecommerce-staging-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "ecommerce-backend-1760307199",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ecommerce-backend-1760307199/global/networks/ecommerce-staging-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}